Java 22 style